feat(data-types): added new data types to reflect the designs
