# veri-backend/src/routes/veris.route.ts
@@ -1,10 +1,11 @@
 import { Router } from 'express';
-import VerisController from '../controllers/veris.controller';
+import VerisController from '@/controllers/veris.controller';
 import { CreateVeriDto } from '../dtos/veris.dto';
-import { Routes } from '../interfaces/routes.interface';
-import validationMiddleware from '../middlewares/validation.middleware';
-import fileMiddleware from '../middlewares/file.middleware';
+import { Routes } from '@/interfaces/routes.interface';
+import validationMiddleware from '@/middlewares/validation.middleware';
+import fileMiddleware from '@/middlewares/file.middleware';
 import authMiddleware from '@/middlewares/auth.middleware';
+import transformMiddleware from '@/middlewares/transform.middleware';
 
 class VerisRoute implements Routes {
   public path = '/veris';
@@ -30,6 +31,7 @@ class VerisRoute implements Routes {
       `${this.path}`,
       authMiddleware,
       fileMiddleware,
+      transformMiddleware('body', 'recipients'),
       validationMiddleware(CreateVeriDto, 'body'),
       this.verisController.createVeri
     );
@@ -37,6 +39,7 @@ class VerisRoute implements Routes {
       `${this.path}/:id(\\d+)`,
       authMiddleware,
       fileMiddleware,
+      transformMiddleware('body', 'recipients'),
       validationMiddleware(CreateVeriDto, 'body', true),
       this.verisController.updateVeri
     );
